--- a/web/css/mycss.css
+++ b/web/css/mycss.css
@@ -1,9 +1,20 @@
 .buscador{
-    margin-top: 7px;
-    margin-left: 35%;
+    padding-top: 10px;
+    text-align: center;
+    background-color: whitesmoke;
+    vertical-align: central;
 }
 
-.imagen{
+.centrado{
     display: block;
     margin: 0 auto;
+}
+
+.sincategoria {
+    text-align: center; padding-top: 50px; padding-bottom: 50px
+}
+
+.chistes {
+    background-color: whitesmoke;
+    height: 50px;
 }
