--- a/web/css/mycss.css
+++ b/web/css/mycss.css
@@ -1,5 +1,5 @@
 .buscador{
-    padding-top: 10px;
+    padding-top: 15px;
     text-align: center;
     background-color: whitesmoke;
     vertical-align: central;
@@ -16,5 +16,27 @@
 
 .chistes {
     background-color: whitesmoke;
-    height: 50px;
+    margin-bottom: 20px;
+}
+
+.chiste {
+    padding: 10px;
+}
+
+.rating {
+	font-size: 0 ;
+	display: inline-block ;
+}
+.rating a {
+	text-decoration: none ;
+	display: inline-block ;
+	font-size: 32px ;
+	font-size: 2rem ;    
+	color: #888 ;
+}
+.rating:hover a {
+	color: gold ;
+}
+.rating > a:hover ~ a {
+	color: #888 ;
 }
